hello-world/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world
  labels:
    app: hello-world
spec:
  type: ClusterIP
  ports:
   - name: http
     port: 80
     targetPort: http
  selector:
    app: hello-world
