hello-world/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-world
spec:
  tls:
  - hosts:
    - daan.se
    secretName: daan-se-tls
  rules:
  - host: daan.se
    http:
      paths:
      - path: /
        backend:
          serviceName: hello-world
          servicePort: http
